tests/fail/ownershipMoveCopyType.rs


fn take(a: i32) -> i32 {
    return a;
}


fn main() {
    let s : i32 = 5;


    take(s);
    println!(s);
}

// show that copy type is copied and not moved 


